reports/dist/run-full-bench-20260609-085346/gateway-api-istio-gateway-api-multi-listener/artifacts/manifests/gateways.yaml
apiVersion: v1
items:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"gateway.networking.k8s.io/v1","kind":"Gateway","metadata":{"annotations":{},"name":"sample-gw","namespace":"sample"},"spec":{"gatewayClassName":"istio","listeners":[{"allowedRoutes":{"namespaces":{"from":"Same"}},"name":"http","port":80,"protocol":"HTTP"},{"allowedRoutes":{"namespaces":{"from":"Same"}},"name":"https","port":443,"protocol":"HTTPS","tls":{"certificateRefs":[{"name":"gateway-tls-cert"}],"mode":"Terminate"}}]}}
    creationTimestamp: "2026-06-09T13:39:49Z"
    generation: 1
    name: sample-gw
    namespace: sample
    resourceVersion: "753"
    uid: 56fee6ad-8aa0-4e1f-a20b-9c937a72a084
  spec:
    gatewayClassName: istio
    listeners:
    - allowedRoutes:
        namespaces:
          from: Same
      name: http
      port: 80
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: Same
      name: https
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
        - group: ""
          kind: Secret
          name: gateway-tls-cert
        mode: Terminate
  status:
    conditions:
    - lastTransitionTime: "2026-06-09T13:39:49Z"
      message: Resource accepted
      observedGeneration: 1
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2026-06-09T13:39:49Z"
      message: 'Assigned to service(s) sample-gw-istio.sample.svc.cluster.local:443
        and sample-gw-istio.sample.svc.cluster.local:80, but failed to assign to all
        requested addresses: address pending for hostname "sample-gw-istio.sample.svc.cluster.local"'
      observedGeneration: 1
      reason: AddressNotAssigned
      status: "False"
      type: Programmed
    listeners:
    - attachedRoutes: 2
      conditions:
      - lastTransitionTime: "2026-06-09T13:39:49Z"
        message: No errors found
        observedGeneration: 1
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: "2026-06-09T13:39:49Z"
        message: No errors found
        observedGeneration: 1
        reason: NoConflicts
        status: "False"
        type: Conflicted
      - lastTransitionTime: "2026-06-09T13:39:49Z"
        message: No errors found
        observedGeneration: 1
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: "2026-06-09T13:39:49Z"
        message: No errors found
        observedGeneration: 1
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: http
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
    - attachedRoutes: 1
      conditions:
      - lastTransitionTime: "2026-06-09T13:39:49Z"
        message: No errors found
        observedGeneration: 1
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: "2026-06-09T13:39:49Z"
        message: No errors found
        observedGeneration: 1
        reason: NoConflicts
        status: "False"
        type: Conflicted
      - lastTransitionTime: "2026-06-09T13:39:49Z"
        message: No errors found
        observedGeneration: 1
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: "2026-06-09T13:39:49Z"
        message: No errors found
        observedGeneration: 1
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: https
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
kind: List
metadata:
  resourceVersion: ""
