reports/dist/run-full-bench-20260609-085346/gateway-api-istio-gateway-api-multi-listener/artifacts/manifests/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      meta.helm.sh/release-name: sample
      meta.helm.sh/release-namespace: sample
    creationTimestamp: "2026-06-09T13:39:46Z"
    labels:
      app.kubernetes.io/managed-by: Helm
    name: sample
    namespace: sample
    resourceVersion: "643"
    uid: 8ee6b470-a794-402a-87d5-2343f02ec596
  spec:
    clusterIP: 10.96.16.241
    clusterIPs:
    - 10.96.16.241
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app: sample
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2026-06-09T13:39:49Z"
    labels:
      gateway.istio.io/managed: istio.io-gateway-controller
      gateway.networking.k8s.io/gateway-name: sample-gw
    name: sample-gw-istio
    namespace: sample
    ownerReferences:
    - apiVersion: gateway.networking.k8s.io/v1beta1
      kind: Gateway
      name: sample-gw
      uid: 56fee6ad-8aa0-4e1f-a20b-9c937a72a084
    resourceVersion: "755"
    uid: 6b0251c8-c98f-4fac-b78b-1c26de571fca
  spec:
    allocateLoadBalancerNodePorts: true
    clusterIP: 10.96.86.127
    clusterIPs:
    - 10.96.86.127
    externalTrafficPolicy: Cluster
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: PreferDualStack
    ports:
    - appProtocol: tcp
      name: status-port
      nodePort: 31835
      port: 15021
      protocol: TCP
      targetPort: 15021
    - appProtocol: http
      name: http
      nodePort: 30450
      port: 80
      protocol: TCP
      targetPort: 80
    - appProtocol: https
      name: https
      nodePort: 32416
      port: 443
      protocol: TCP
      targetPort: 443
    selector:
      gateway.networking.k8s.io/gateway-name: sample-gw
    sessionAffinity: None
    type: LoadBalancer
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
